Basic environment data for reader templates

--- a/WebReader/WebReader.csproj
+++ b/WebReader/WebReader.csproj
@@ -1,27 +1,39 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <AssemblyName>Docomb.WebReader</AssemblyName>
-    <RootNamespace>Docomb.WebReader</RootNamespace>
-    <Version>0.0.1</Version>
-    <Authors>Matjaž Miler</Authors>
-    <Product>Docomb</Product>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+		<AssemblyName>Docomb.WebReader</AssemblyName>
+		<RootNamespace>Docomb.WebReader</RootNamespace>
+		<Version>0.0.1</Version>
+		<Authors>Matjaž Miler</Authors>
+		<Product>Docomb</Product>
+		<GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
+	<ItemGroup>
+		<Content Remove="compilerconfig.json" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="2.1.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\WebCore\WebCore.csproj" />
-  </ItemGroup>
-  
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="compilerconfig.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\WebCore\WebCore.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<EmbeddedResource Include="wwwroot\**\*" />
+	</ItemGroup>
 
 
 </Project>
