--- a/ContentStorage/ContentStorage.csproj
+++ b/ContentStorage/ContentStorage.csproj
@@ -10,8 +10,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="ColorCode.Portable" Version="1.0.3" />
 	  <PackageReference Include="Markdig" Version="0.24.0" />
-	  <PackageReference Include="Markdig.SyntaxHighlighting" Version="1.1.7" />
 	  <PackageReference Include="MarkdownSharp" Version="2.0.5" />
 	  <PackageReference Include="YamlDotNet" Version="11.1.1" />
 	</ItemGroup>
