--- a/TestSite/TestSite.csproj
+++ b/TestSite/TestSite.csproj
@@ -10,6 +10,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\WebAdmin\WebAdmin.csproj" />
 	  <ProjectReference Include="..\WebCore\WebCore.csproj" />
 	  <ProjectReference Include="..\WebReader\WebReader.csproj" />
 	</ItemGroup>
