--- a/WebAdmin/WebAdmin.csproj
+++ b/WebAdmin/WebAdmin.csproj
@@ -21,7 +21,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="5.0.6" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="5.0.7" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -38,6 +38,12 @@
 
 	<ItemGroup>
 	  <None Include="compilerconfig.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="scripts\" />
+	  <Folder Include="wwwroot\_admin\" />
+	  <Folder Include="wwwroot\_resources\admin\js\" />
 	</ItemGroup>
 
 </Project>
