--- a/WebAdmin/ClientApp/package.json
+++ b/WebAdmin/ClientApp/package.json
@@ -13,11 +13,14 @@
     "license": "ISC",
     "dependencies": {
         "@fluentui/react": "^8.17.3",
+        "@types/jquery": "^3.5.5",
         "@types/react": "^17.0.11",
         "@types/react-dom": "^17.0.7",
+        "acorn": "^8.4.0",
         "babel-plugin-transform-runtime": "^6.23.0",
         "buble": "^0.20.0",
         "buble-loader": "^0.5.1",
+        "jquery": "^3.6.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
