--- a/WebAdmin/WebAdmin.csproj
+++ b/WebAdmin/WebAdmin.csproj
@@ -31,6 +31,7 @@
 	<ItemGroup>
 	  <Content Remove="compilerconfig.json" />
 	  <Content Remove="wwwroot\_resources\styles\article.scss" />
+	  <Content Remove="wwwroot\_resources\styles\docomb\auth.scss" />
 	  <Content Remove="wwwroot\_resources\styles\docomb\shared\base.scss" />
 	  <Content Remove="wwwroot\_resources\styles\docomb\theme.scss" />
 	</ItemGroup>
