--- a/WebAdmin/ClientApp/package.json
+++ b/WebAdmin/ClientApp/package.json
@@ -12,11 +12,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@fluentui/react": "^8.17.3",
+        "@fluentui/font-icons-mdl2": "^8.1.4",
+        "@fluentui/react": "^8.21.1",
         "@types/jquery": "^3.5.5",
         "@types/react": "^17.0.11",
-        "@types/react-dom": "^17.0.7",
-        "acorn": "^8.4.0",
+        "@types/react-dom": "^17.0.8",
+        "acorn": "^8.4.1",
         "babel-plugin-transform-runtime": "^6.23.0",
         "buble": "^0.20.0",
         "buble-loader": "^0.5.1",
@@ -24,10 +25,10 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
-        "typescript": "^4.3.2",
+        "typescript": "^4.3.4",
         "webpack-cli": "^4.7.2"
     },
     "devDependencies": {
-        "webpack": "^5.38.1"
+        "webpack": "^5.41.1"
     }
 }
