--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CommonCore\CommonCore.csproj" />
+    <ProjectReference Include="..\WebCore\WebCore.csproj" />
   </ItemGroup>
 
 </Project>
