--- a/ContentStorage/ContentStorage.csproj
+++ b/ContentStorage/ContentStorage.csproj
@@ -11,7 +11,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="ColorCode.Portable" Version="1.0.3" />
-	  <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
+	  <PackageReference Include="LibGit2Sharp" Version="0.27.0-preview-0102" />
 	  <PackageReference Include="Markdig" Version="0.25.0" />
 	  <PackageReference Include="MarkdownSharp" Version="2.0.5" />
 	  <PackageReference Include="YamlDotNet" Version="11.2.1" />
