--- a/CommonCore/CommonCore.csproj
+++ b/CommonCore/CommonCore.csproj
@@ -6,7 +6,25 @@
 		<RootNamespace>Docomb.CommonCore</RootNamespace>
 		<Product>Docomb</Product>
 		<Authors>Matjaž Miler</Authors>
-		<Version>0.0.1</Version>
+		<Version>0.1.0</Version>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Copyright>Copyright © Matjaž Miler 2021</Copyright>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<PackageProjectUrl>https://github.com/MatMiler/Docomb</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
+		<PackageIconUrl />
+		<Description></Description>
 	</PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\icon.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
