--- a/WebCore/WebCore.csproj
+++ b/WebCore/WebCore.csproj
@@ -6,7 +6,14 @@
 		<RootNamespace>Docomb.WebCore</RootNamespace>
 		<Product>Docomb</Product>
 		<Authors>Matjaž Miler</Authors>
-		<Version>0.0.1</Version>
+		<Version>0.1.2</Version>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Copyright>Copyright © Matjaž Miler 2021</Copyright>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<PackageProjectUrl>https://github.com/MatMiler/Docomb</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
+		<PackageIconUrl />
+		<Description>Shared library for Docomb admin and reader web interface</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -21,6 +28,17 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\ContentStorage\ContentStorage.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="..\icon.png">
+	    <Pack>True</Pack>
+	    <PackagePath></PackagePath>
+	  </None>
+	  <None Include="..\LICENSE">
+	    <Pack>True</Pack>
+	    <PackagePath></PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
