--- a/CommonCore/CommonCore.csproj
+++ b/CommonCore/CommonCore.csproj
@@ -6,7 +6,7 @@
 		<RootNamespace>Docomb.CommonCore</RootNamespace>
 		<Product>Docomb</Product>
 		<Authors>Matjaž Miler</Authors>
-		<Version>0.2.1</Version>
+		<Version>0.2.3-alpha</Version>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Copyright>Copyright © Matjaž Miler 2021</Copyright>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -28,8 +28,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Azure.Identity" Version="1.5.0" />
-		<PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
