--- a/WebCore/WebCore.csproj
+++ b/WebCore/WebCore.csproj
@@ -6,7 +6,7 @@
 		<RootNamespace>Docomb.WebCore</RootNamespace>
 		<Product>Docomb</Product>
 		<Authors>Matjaž Miler</Authors>
-		<Version>0.2.2</Version>
+		<Version>0.2.3-alpha</Version>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Copyright>Copyright © Matjaž Miler 2021</Copyright>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
